--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@ a:hover{
 	width:100%;
 	height:600px;
 }
+#map img{
+	background:#FFF;
+	padding:1px;
+	border:#333 solid 1px;	
+}
+#map a{
+	color:#09F;
+}
 footer{
 	position:absolute;
 	z-index:8;
