--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h1{
 	letter-spacing:-10px;
 	border-bottom:#CCC solid 10px;
 	position:absolute;
-	top:40px;
+	top:10px;
 	right:10px;
 	z-index:9;
 	box-shadow:0 2px 6px #333;
@@ -55,11 +55,6 @@ a:hover{
 #map{
 	width:100%;
 	height:600px;
-}
-#map img{
-	background:#FFF;
-	padding:1px;
-	border:#333 solid 1px;	
 }
 #map a{
 	color:#09F;
@@ -90,6 +85,7 @@ $(document).ready(function(){
 	var opts = {
 			zoom: 3,
 			center: new google.maps.LatLng(30.178873, -4.570313),
+			disableDefaultUI: true,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 		},
 		map = new google.maps.Map($('#map').get(0), opts),
