Minor css adjustments

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body{
 }
 h1{
 	color:#000;
-	background:#FFF;
+	background:rgba(255,255,255,0.8);
 	display:inline-block;
 	padding-right:15px;
 	margin:0;
@@ -38,12 +38,13 @@ aside{
 	top:50%;
 	left:50%;
 	z-index:9;
-	background:#FFF;
+	background:rgba(255,255,255,0.8);
 	padding:20px 30px;
 	border:#333 solid 1px;
 	box-shadow:#000 0 0 10px;
 	margin:-20px 0 0 -70px;
 	text-align:center;
+	border-radius:10px;
 }
 a, a:focus, a:visited, a:link{
 	color:#fff;
