Display new API message

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ $(document).ready(function(){
 	<form action="index.html" method="post" id="changeTopic">
 		<label>Enter topic to search for<br /><input type="text" name="topic" id="topic" placeholder="Topic" /></label>
 		<hr />
-		<div style="text-align:center"><small>Real time tweet location for any topic</small></div>
+		<div style="text-align:center"><small><span style="color:red">Twitter now requires Authentication to search, <br />I still have to update this code</span><br />Real time tweet location for any topic</small></div>
 	</form>
 </aside>
 <div id="map">Loading map...</div>
